--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Mar 09 12:52:23 CST 2021
-sdk.dir=C\:\\Users\\vicen\\AppData\\Local\\Android\\Sdk
+#Tue Mar 09 10:35:33 CST 2021
+sdk.dir=C\:\\Users\\mario\\AppData\\Local\\Android\\Sdk
