[ADD] Hacer merge.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AdministracionRedesApp">
         <activity android:name=".LocalizacionFormActivity"></activity>
-        <activity android:name=".ListaActivity">
+        <activity android:name=".LocalizacionListaActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
