--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AdministracionRedesApp">
-        <activity android:name=".InventarioFormActivity">
+        <activity android:name=".InventarioFormActivity"></activity>
+        <activity android:name=".InventarioListaActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
