--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Mar 09 10:23:56 CST 2021
-sdk.dir=C\:\\Users\\Antonio\\AppData\\Local\\Android\\Sdk
+#Wed Mar 10 00:24:47 CST 2021
+sdk.dir=C\:\\Users\\vicen\\AppData\\Local\\Android\\Sdk
