--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AdministracionRedesApp">
         <activity android:name=".FallasFormActivity"></activity>
-        <activity android:name=".FallasListaActivity"/>
-        <activity android:name=".LocalizacionFormActivity"/>
-        <activity android:name=".LocalizacionListaActivity"/>
-           
+        <activity android:name=".FallasListaActivity" />
+        <activity android:name=".LocalizacionFormActivity" />
+        <activity android:name=".LocalizacionListaActivity" />
+        <activity
+            android:name=".InventarioFormActivity"
+            android:parentActivityName=".InventarioListaActivity" />
+        <activity android:name=".InventarioListaActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
-
 </manifest>
