--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Wed Mar 10 00:24:47 CST 2021
-sdk.dir=C\:\\Users\\vicen\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\manue\\AppData\\Local\\Android\\Sdk
