--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,17 +10,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AdministracionRedesApp">
         <activity android:name=".FallasFormActivity"></activity>
-        <activity android:name=".FallasListaActivity"/>
-        <activity android:name=".LocalizacionFormActivity"/>
-        <activity android:name=".LocalizacionListaActivity"/>
+        <activity android:name=".FallasListaActivity" />
+        <activity android:name=".LocalizacionFormActivity" />
+        <activity android:name=".LocalizacionListaActivity" />
         <activity android:name=".InventarioFormActivity"></activity>
-        <activity android:name=".InventarioListaActivity">
+        <activity android:name=".InventarioListaActivity" />
         <activity android:name=".ListaConfiguracionesActivity"></activity>
-        <activity android:name=".ConfiguracionesFormActivity"></activity>
-        <activity
-            android:name=".InventarioFormActivity"
-            android:parentActivityName=".InventarioListaActivity" />
-        <activity android:name=".InventarioListaActivity">
+        <activity android:name=".ConfiguracionesFormActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
