--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,18 +9,24 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AdministracionRedesApp">
-        <activity android:name=".FallasFormActivity"></activity>
-        <activity android:name=".FallasListaActivity" />
-        <activity android:name=".LocalizacionFormActivity" />
-        <activity android:name=".LocalizacionListaActivity" />
-        <activity android:name=".InventarioFormActivity"></activity>
-        <activity android:name=".InventarioListaActivity" />
-        <activity android:name=".ListaConfiguracionesActivity"></activity>
-        <activity android:name=".ConfiguracionesFormActivity">
+        <activity android:name=".FallasFormActivity" android:parentActivityName=".FallasListaActivity"/>
+        <activity android:name=".FallasListaActivity" android:parentActivityName=".MainActivity"/>
+
+        <activity android:name=".LocalizacionFormActivity" android:parentActivityName=".LocalizacionListaActivity" />
+        <activity android:name=".LocalizacionListaActivity" android:parentActivityName=".MainActivity"/>
+
+        <activity android:name=".InventarioFormActivity" android:parentActivityName=".InventarioListaActivity"/>
+        <activity android:name=".InventarioListaActivity" android:parentActivityName=".MainActivity"/>
+
+        <activity android:name=".ConfiguracionesListaActivity" android:parentActivityName=".ConfiguracionesListaActivity"/>
+        <activity android:name=".ConfiguracionesFormActivity" android:parentActivityName=".MainActivity"/>
+
+        <activity android:name=".MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 </manifest>
