--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Mar 09 12:52:23 CST 2021
-#sdk.dir=C\:\\Users\\vicen\\AppData\\Local\\Android\\Sdk
-
+#Wed Mar 10 23:55:20 CST 2021
+sdk.dir=C\:\\Users\\manue\\AppData\\Local\\Android\\Sdk
