--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.administracionredes.administracionredesapp">
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher2"
@@ -8,21 +9,35 @@
         android:roundIcon="@mipmap/ic_launcher2_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AdministracionRedesApp">
-        <activity android:name=".FallasFormActivity" android:parentActivityName=".FallasListaActivity"/>
-        <activity android:name=".FallasListaActivity" android:parentActivityName=".MainActivity"/>
-        <activity android:name=".LocalizacionFormActivity" android:parentActivityName=".LocalizacionListaActivity"/>
-        <activity android:name=".LocalizacionListaActivity"  android:parentActivityName=".MainActivity"/>
-        <activity android:name=".InventarioFormActivity" android:parentActivityName=".InventarioListaActivity"/>
-        <activity android:name=".InventarioListaActivity"  android:parentActivityName=".MainActivity"/>
-        <activity android:name=".ConfiguracionesListaActivity" android:parentActivityName=".ConfiguracionesListaActivity"/>
-        <activity android:name=".ConfiguracionesFormActivity"  android:parentActivityName=".MainActivity"/>
+        <activity
+            android:name=".FallasFormActivity"
+            android:parentActivityName=".FallasListaActivity" />
+        <activity
+            android:name=".FallasListaActivity"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".LocalizacionFormActivity"
+            android:parentActivityName=".LocalizacionListaActivity" />
+        <activity
+            android:name=".LocalizacionListaActivity"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".InventarioFormActivity"
+            android:parentActivityName=".InventarioListaActivity" />
+        <activity
+            android:name=".InventarioListaActivity"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".ConfiguracionesListaActivity"
+            android:parentActivityName=".MainActivity"></activity>
+        <activity
+            android:name=".ConfiguracionesFormActivity"
+            android:parentActivityName=".ConfiguracionesListaActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
