--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Aug 26 17:39:12 CDT 2020
-sdk.dir=C\:\\Users\\vicen\\AppData\\Local\\Android\\Sdk
+#Thu Mar 11 12:36:41 CST 2021
+sdk.dir=C\:\\Users\\manue\\AppData\\Local\\Android\\Sdk
